kubernetes-configuration/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express
spec:
  selector:
    app: express
  ports:
    - port: 3000
      targetPort: 3000
